# note-taking-app-monorepo

./: .gitignore  .prettierrc  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .gitignore  Cargo.toml  README.md  package.json
apps/api/logs/: app.log.2025-05-14-15  app.log.2025-05-14-16  app.log.2025-05-14-17  app.log.2025-05-14-22  app.log.2025-05-16-15  app.log.2025-05-16-16  app.log.2025-05-16-17  app.log.2025-05-16-18  app.log.2025-05-16-20  app.log.2025-05-18-03  app.log.2025-05-18-05  app.log.2025-05-18-17  app.log.2025-05-18-18  app.log.2025-05-18-19  app.log.2025-05-19-05  app.log.2025-05-19-15  app.log.2025-05-19-16  app.log.2025-05-19-17  app.log.2025-05-20-02  app.log.2025-05-20-03  app.log.2025-05-20-04  app.log.2025-05-20-05  app.log.2025-05-21-02  app.log.2025-05-21-03  app.log.2025-05-22-02
apps/api/migrations/: 20250514155917_create-function-updated-at.down.sql  20250514155917_create-function-updated-at.up.sql  20250514155927_create-users-table.up.sql  20250514160536_create-credentials-table.up.sql  20250514160916_create-auth-provider-table.down.sql  20250514160916_create-auth-provider-table.up.sql  20250514161334_create-admin-table.up.sql
apps/api/prisma/: schema.prisma
apps/api/prisma/seed/: data.ts  index.ts  utils.ts
apps/api/src/: app_state.rs  database.rs  environment.rs  lib.rs  main.rs  main.ts  router.rs  server.rs
apps/api/src/app_routes/: auth_routes.rs  health_routes.rs  mod.rs  root_routes.rs  user_routes.rs
apps/api/src/common/: axum_response.rs  cors.rs  (+3 more)
apps/api/test/: app.e2e-spec.ts
(+272 files in other folders)
