[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
log_service = { path = "../../packages/log-service" }

axum = "0.8.4"
dotenv = "0.15.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
] }

tracing = { workspace = true }
anyhow = "1.0.98"
thiserror = { workspace = true }

tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
once_cell = "1.21.3"
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
async-trait = "0.1.88"
bcrypt = "0.17.0"


[dev-dependencies]
sqlx-cli = { version = "0.8.5", features = ["postgres"] }
